--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ header nav a{
 
 #sobremim > h2{
     color: var(--cor4);
-    width: 300px;
+    max-width: 300px;
     text-align: center;
     margin-left: 20vw;
 }
