--- a/projetos/paginaDeLogin/style.css
+++ b/projetos/paginaDeLogin/style.css
@@ -8,13 +8,18 @@
 body{
     height: 100vh;
     background-color: black;
-    background-image: url(imagens/Designer.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+    background-image:linear-gradient(to top  ,#6141aa , #081e99 , #8522d6) ;
     display: flex;
     align-items: center ;
     justify-content: center;
+}
+
+main{
+    background-color: #ffffff21 ;
+    width: 350px;
+    height: 500px;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 #gmail{
